fixed sidebar's icons alignment

--- a/src/Scripts/Components/app-components/sidebar/sidebar.scss
+++ b/src/Scripts/Components/app-components/sidebar/sidebar.scss
@@ -35,7 +35,7 @@
             For some reason, if instead of `min-width` i use
             width, it causes content jumping.
           */ 
-          min-width: 4.5rem;
+          min-width: 5rem;
         }
 
         &__text {
